Add Maven Modules to support multiple Hibernate versions
- Add coherence-hibernate-cache-5 (Hibernate 5.0.x + 5.1.x)
- Add coherence-hibernate-cache-52 (Hibernate 5.2.x)
- Add coherence-hibernate-cache-commons for common source code