@@ -41,7 +41,7 @@
 
     <groupId>com.oracle.coherence.hibernate</groupId>
     <artifactId>coherence-hibernate-integration</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>coherence-hibernate-integration</name>
@@ -71,7 +71,10 @@
     <modules>
         <module>coherence-hibernate-cache-store</module>
         <module>coherence-hibernate-cache-store-tests</module>
-        <module>coherence-hibernate-second-level-cache</module>
+        <module>coherence-hibernate-cache-commons</module>
+        <module>coherence-hibernate-cache-4</module>
+        <module>coherence-hibernate-cache-5</module>
+        <module>coherence-hibernate-cache-52</module>
         <module>coherence-hibernate-second-level-cache-tests</module>
         <module>coherence-hibernate-site</module>
     </modules>
@@ -88,6 +91,7 @@
 
         <!-- source encoding definition -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version.release>8</java.version.release>
 
         <!-- plugin dependency versions (alphabetically) -->
         <doxia.module.markdown.version>1.0</doxia.module.markdown.version>
@@ -108,12 +112,42 @@
         <!--<coherence.version>[3.4.2,)</coherence.version>-->
         <coherence.version>20.06.1</coherence.version>
         <!--<hibernate.version>[3.3.1.GA,)</hibernate.version>-->
-        <hibernate.version>4.2.4.Final</hibernate.version>
-        <junit.version>4.11</junit.version>
+        <hibernate4.version>4.2.4.Final</hibernate4.version>
+        <hibernate5.version>5.1.17.Final</hibernate5.version>
+        <hibernate52.version>5.2.17.Final</hibernate52.version>
+        <hibernate53.version>5.3.18.Final</hibernate53.version>
+        <junit.version>4.13</junit.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.oracle.coherence.hibernate</groupId>
+                <artifactId>coherence-hibernate-cache-store</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.coherence.hibernate</groupId>
+                <artifactId>coherence-hibernate-cache-52</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.coherence.hibernate</groupId>
+                <artifactId>coherence-hibernate-cache-commons</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.coherence.hibernate</groupId>
+                <artifactId>coherence-hibernate-cache-commons</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+                <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle.coherence.hibernate</groupId>
+                <artifactId>coherence-hibernate-cache-4</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.oracle.coherence.ce</groupId>
                 <artifactId>coherence</artifactId>
@@ -123,7 +157,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>${hibernate.version}</version>
+                <version>${hibernate52.version}</version>
             </dependency>
 
             <dependency>
@@ -176,8 +210,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java.version.release}</source>
+                    <target>${java.version.release}</target>
                 </configuration>
             </plugin>
 
@@ -186,7 +220,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
+                    <argLine>-Xms800m -Xmx800m</argLine>
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
@@ -265,7 +299,11 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
         </plugins>
 
     </build>
